--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -93,6 +93,11 @@ file_size_limit = "50MiB"
 # allowed_mime_types = ["image/png", "image/jpeg"]
 # objects_path = "./images"
 
+[storage.buckets.ticket-attachments]
+public = false
+file_size_limit = "50MiB"
+allowed_mime_types = ["image/*", "application/pdf", "text/plain", "application/msword", "application/vnd.openxmlformats-officedocument.wordprocessingml.document"]
+
 [auth]
 enabled = true
 # The base URL of your website. Used as an allow-list for redirects and for constructing URLs used
