--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "latest",
@@ -33,6 +34,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "recharts": "latest",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
