working on custom status

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@types/react-color": "^3.0.13",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "postgres": "^3.4.5",
     "prettier": "^3.3.3",
     "react": "19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "19.0.0",
     "recharts": "latest",
     "sonner": "^1.7.2",
