--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@types/react-color": "^3.0.13",
+    "@uiw/react-md-editor": "^4.0.5",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +39,7 @@
     "react": "19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "19.0.0",
+    "react-markdown": "^9.0.3",
     "recharts": "latest",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.5.2"
