--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
+    "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "latest",
     "@types/react-color": "^3.0.13",
     "@uiw/react-md-editor": "^4.0.5",
