--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-markdown": "^9.0.3",
     "recharts": "latest",
     "sonner": "^1.7.2",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
