--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.50.0",
+    "eslint-config-next": "15.1.6",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "postcss": "8.4.49",
