--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.3.27",
+    "@langchain/openai": "^0.4.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -30,6 +32,7 @@
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "langchain": "^0.3.13",
     "lucide-react": "^0.468.0",
     "next": "latest",
     "next-themes": "^0.4.3",
