--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@langchain/community": "^0.3.27",
     "@langchain/langgraph": "^0.2.41",
     "@langchain/openai": "^0.4.2",
