--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 # https://app.supabase.com/project/_/settings/api
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# OpenAI API Key for AI SDK
+# https://platform.openai.com/api-keys
+OPENAI_API_KEY=your-openai-api-key
+
+# Feature Flags
+ENABLE_AI_SDK=true # Set to false to use LangGraph workflow
