--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.6",
     "@heroicons/react": "^2.2.0",
     "@langchain/community": "^0.3.27",
     "@langchain/langgraph": "^0.2.41",
@@ -32,6 +33,7 @@
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "latest",
     "@types/react-color": "^3.0.13",
+    "@types/uuid": "^10.0.0",
     "@uiw/react-md-editor": "^4.0.5",
     "ai": "^4.1.14",
     "autoprefixer": "10.4.20",
@@ -53,7 +55,8 @@
     "react-markdown": "^9.0.3",
     "recharts": "latest",
     "sonner": "^1.7.2",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
